migrating to jdk21 + fix proxy startup + vms application options