@@ -38,7 +38,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>18</java.version>
+    <java.version>21</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
 
@@ -47,7 +47,7 @@
     <slf4j.version>2.0.5</slf4j.version>
 
     <!-- surefire plugin openjdk18 -->
-    <argLine>--add-modules jdk.incubator.foreign --add-exports java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/jdk.internal.util=ALL-UNNAMED</argLine>
+<!--    <argLine>&#45;&#45;add-modules jdk.incubator.foreign &#45;&#45;add-exports java.base/jdk.internal.misc=ALL-UNNAMED &#45;&#45;add-opens java.base/jdk.internal.util=ALL-UNNAMED</argLine>-->
 
   </properties>
 
@@ -91,13 +91,24 @@
             <source>${java.version}</source>
             <target>${java.version}</target>
             <compilerArgs>
-              <arg>--add-modules</arg>
-              <arg>jdk.incubator.foreign</arg>
+              <!-- for memory segment support -->
+              <arg>--enable-preview</arg>
+              <!-- for unsafe support -->
               <arg>--add-exports</arg>
               <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
               <arg>--add-opens</arg>
               <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
             </compilerArgs>
+          </configuration>
+        </plugin>
+
+        <!-- prevent tests from running when building the solution -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.2.5</version>
+          <configuration>
+            <skipTests>true</skipTests>
           </configuration>
         </plugin>
 
